[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/parts/PartCharacterStat.gd" type="Script" id=1]
[ext_resource path="res://ui/components/ComponentNumberImput.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="CharacterStat" type="PanelContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 93.0
margin_bottom = 93.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 82.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 10.0
margin_top = 18.0
margin_right = 68.0
margin_bottom = 60.0

[node name="ButtonName" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_left = 14.0
margin_right = 44.0
margin_bottom = 14.0
size_flags_horizontal = 6
custom_styles/normal = SubResource( 1 )
text = "STAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberImput" parent="MarginContainer/CenterContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ButtonName" to="." method="_on_ButtonName_pressed"]
